# otp-authenticator

./: .gitignore  CMakeLists.txt  LICENSE
include/: crypt.h  otp.h  settings.h
src/: crypt.cpp  main.cpp  settings.cpp
